--- a/standard.bib
+++ b/standard.bib
@@ -1,437 +1,463 @@
 @article{Ramesh2004,
 	author = {Ramesh, A. N. and Kambhampati, C. and Monson, J. R T and Drew, P. J.},
-	doi = {10.1308/147870804290},
-	issn = {00358843},
-	journal = {Annals of the Royal College of Surgeons of England},
-	number = {5},
+	title = {Artificial intelligence in medicine},
+	year = {2004},
+	journal = {Ann. of the Royal College of Surgeons of England},
+	volume = 86,
 	pages = {334--338},
-	title = {{Artificial intelligence in medicine}},
-	volume = {86},
-	year = {2004}
+	number = {5},
+	publisher={Royal College of Surgeons of England}
 }
 
 @INPROCEEDINGS{Jia_Jiang2006, 
 	author={Jia, Y and Jiang, Y}, 
-	booktitle={International Conference on Computer Graphics, Imaging and Visualisation (CGIV'06)}, 
 	title={Active Contour Model with Shape Constraints for Bone Fracture Detection}, 
-	year={2006}, 
-	pages={90-95}, 
+	year={2006},
+	booktitle={Int. Conf. on Computer Graphics, Imaging and Visualisation (CGIV'06)}, 
+	pages={90--95}, 
+	publisher = {IEEE},
 	doi={10.1109/CGIV.2006.16}, 
-	month=jul
+	month={Jul}
 }
 
 @INPROCEEDINGS{Liang_Pan_Huang_Fan_2010, 
 	author={J. Liang and B. C. Pan and Y. H. Huang and X. Y. Fan}, 
-	booktitle={2010 International Conference on Wavelet Analysis and Pattern Recognition}, 
 	title={Fracture identification of X-ray image}, 
 	year={2010}, 
-	pages={67-73}, 
+	booktitle={2010 Int. Conf. on Wavelet Analysis and Pattern Recognition}, 
+	publisher={IEEE}
+	pages={67--73}, 
 	doi={10.1109/ICWAPR.2010.5576438}, 
-	ISSN={2158-5695}, 
-	month= jul
+	note = {ISSN 2158-5695}, 
+	month= {Jul}
 }
 
 
 @inproceedings{saha_classifying_2016,
-	title = {Classifying digital X-ray images into different human body parts},
-	doi = {10.1109/ICIEV.2016.7760190},
-	pages = {67-71},
-	booktitle = {2016 5th International Conference on Informatics, Electronics and Vision ({ICIEV})},
 	author = {Saha, S. and Mahmud, A. and Ali, A. A. and Amin, M. A.},
+	title = {Classifying digital X-ray images into different human body parts},
 	year = {2016},
-	month = may
+	booktitle = {2016 5th Int. Conf. on Informatics, Electronics and Vision ({ICIEV})},
+	doi = {10.1109/ICIEV.2016.7760190},
+	pages = {67--71},
+	publisher={IEEE},
+	month = {May}
 }
 
 @inproceedings{jyothi_congenital_2016,
-	title = {Congenital Heart Septum Defect Diagnosis on Chest X-Ray Features Using Neural Networks},
-	doi = {10.1109/CICT.2016.59},
-	pages = {265-269},
-	booktitle = {2016 Second International Conference on Computational Intelligence Communication Technology ({CICT})},
 	author = {Jyothi, S. and Vanisree, K.},
+	title = {Congenital Heart Septum Defect Diagnosis on Chest X-Ray Features Using Neural Networks},
 	year = {2016},
-	month = feb
+	booktitle = {2016 2nd Int. Conf. on Computational Intelligence Communication Technology ({CICT})},
+	pages = {265--269},
+	doi = {10.1109/CICT.2016.59},
+	publisher={IEEE},
+	month = {Feb}
 }
 
 @article{meyer_physicians_2013,
+	author = {Meyer, Ashley N. D. and Payne, Velma L. and Meeks, Derek W. and Rao, Radha and Singh, Hardeep},
 	title = {Physicians’ Diagnostic Accuracy, Confidence, and Resource Requests: A Vignette Study},
-	volume = {173},
+	year = {2013},
+	journal = {{JAMA} Internal Medicine},
+	volume = 173,
+	pages = {1952--1958},
+	number = 21,
 	issn = {2168-6106},
 	doi = {10.1001/jamainternmed.2013.10081},
-	pages = {1952-1958},
-	number = {21},
-	journal = {{JAMA} Internal Medicine},
-	author = {Meyer, Ashley N. D. and Payne, Velma L. and Meeks, Derek W. and Rao, Radha and Singh, Hardeep},
-	year = {2013},
-	month = nov,
+	month = {Nov},
 	day = {25}
 }
 
 @inproceedings{multiple_classification,
-	title = {Multiple classification system for fracture detection in human bone x-ray images},
-	doi = {10.1109/ICCCNT.2012.6395889},
-	pages = {1-8},
-	booktitle = {2012 Third International Conference on Computing Communication Networking Technologies ({ICCCNT})},
 	author = {Umadevi, N. and Geethalakshmi, S. N.},
+	title = {Multiple classification system for fracture detection in human bone x-ray images},
 	year = {2012},
-	month = jul
+	booktitle = {2012 3rd Int. Conf. on Computing Communication Networking Technologies ({ICCCNT})},
+	pages = {1--8},
+	publisher={IEEE},
+	doi = {10.1109/ICCCNT.2012.6395889},
+	month = {Jul}
 }
 
 @inproceedings{neagoe_new_2014,
+	author={Neagoe, Victor-Emil and Stoica, Radu-Mihai},
 	title = {A new neural network-based approach for automatic annotation of remote sensing imagery},
-	doi = {10.1109/IGARSS.2014.6946798},
-	pages = {1781--1784},
-	booktitle = {2014 {IEEE} Geoscience and Remote Sensing Symposium},
-	author = {Neagoe, V. E. and Stoica, R. M.},
 	year = {2014},
-	month = jul
+	booktitle = {2014 {IEEE} Geoscience and Remote Sensing Symp.},
+	pages = {1781--1784},
+	publisher = {IEEE},
+	doi = {10.1109/IGARSS.2014.6946798},
+	month = {Jul}
 }
 
 @article{intrator_feature_1992,
+	author = {Intrator, Nathan},
 	title = {Feature Extraction Using an Unsupervised Neural Network},
+	year = {1992},
+	journal = {Neural Computation},
 	volume = {4},
-	issn = {0899-7667},
-	doi = {10.1162/neco.1992.4.1.98},
 	pages = {98-107},
 	number = {1},
-	journal = {Neural Computation},
-	author = {Intrator, Nathan},
-	year = {1992},
-	month = jan,
+	issn = {0899-7667},
+	doi = {10.1162/neco.1992.4.1.98},
+	publisher={MIT Press},
+	month = {Jan},
 	day = {1}
 }
 
 @inproceedings{kottaimalai_eeg_2013,
-	title = {{EEG} signal classification using Principal Component Analysis with Neural Network in Brain Computer Interface applications},
-	doi = {10.1109/ICE-CCN.2013.6528498},
-	pages = {227-231},
-	booktitle = {2013 {IEEE} International Conference {ON} Emerging Trends in Computing, Communication and Nanotechnology ({ICECCN})},
 	author = {Kottaimalai, R. and Rajasekaran, M. P. and Selvam, V. and Kannapiran, B.},
+	title = {{EEG} signal classification using Principal Component Analysis with Neural Network in Brain Computer Interface applications},
 	year = {2013},
-	month = mar
+	booktitle = {2013 {IEEE} Int. Conf. {ON} Emerging Trends in Computing, Communication and Nanotechnology ({ICECCN})},
+	pages = {227--231},
+	publisher = {IEEE}
+	doi = {10.1109/ICE-CCN.2013.6528498},
+	month = {Mar}
 }
 
 @article{mahajan2011classification,
+	author={Mahajan, Kavita and Vargantwar, MR and Rajput, Sangita M},
   	title={Classification of EEG using PCA, ICA and Neural Network},
-  	author={Mahajan, Kavita and Vargantwar, MR and Rajput, Sangita M},
-  	journal={International Journal of Engineering and Advanced Technology},
+  	year={2011},
+  	journal={Int. Journal of Engineering and Advanced Technology},
   	volume={1},
   	number={1},
-  	pages={80-83},
-  	year={2011}
+  	pages={80--83},
 }
 
 @article{Mahendran2011,
 	author = {Mahendran, S and Baboo, S Santhosh},
-	number = {1},
-	pages = {340-345},
 	title = {Automatic Fracture Detection Using Classifiers- A Review},
-	journal = {IJCSI International Journal of Computer Science},
-	publisher={Citeseer},
-	volume = {8},
 	year = {2011},
-	month = nov
+	journal = {IJCSI Int. Journal of Computer Science},
+	number = {1},
+	volume = {8},
+	pages = {340--345},
+	publisher={Citeseer},
+	month = {Nov}
 }
 
 @article{Jolliffe2016,
 	author = {Jolliffe, Ian T and Cadima, Jorge and Cadima, Jorge},
-	title = {Principal component analysis : a review and recent developments Subject Areas : Author for correspondence },
-	year = {2016}
+	title = {Principal component analysis: a review and recent developments },
+	year = {2016},
+	journal = {Phil. Trans. R. Soc. A},
+	volume = {374},
+	pages={20150202},
+	number={2065},
 }
 
 @article{Center2002,
-	author = {Center, Imola K Fodor and Scienti, Applied and Box, Lawrence Livermore National Laboratory P O},
+	author={Fodor, Imola K},
+	title = {A survey of dimension reduction techniques},
+	year = {2002},
+	journal={Center for Applied Scientific Computing, Lawrence Livermore Nat. Laboratory},
+	volume={9},
+	pages = {1--18},
 	doi = {10.2172/15002155},
 	isbn = {UCRL-ID-148494},
-	journal = {Computing},
 	number = {1},
-	pages = {1-18},
-	title = {A survey of dimension reduction techniques},
-	year = {2002}
 }
 
 @INPROCEEDINGS{KPCA_2016, 
 	author={D. Kapsoulis and K. Tsiakas and V. Asouti and K. Giannakoglou}, 
-	booktitle={2016 IEEE Symposium Series on Computational Intelligence (SSCI)}, 
 	title={The use of Kernel PCA in evolutionary optimization for computationally demanding engineering applications}, 
-	year={2016}, 
-	pages={1-8}, 
+	year={2016},
+	booktitle={2016 IEEE Symp. Series on Computational Intelligence (SSCI)}, 
+	pages={1--8}, 
+	publisher={IEEE},
 	doi={10.1109/SSCI.2016.7850203}, 
 	month={Dec}
 }
 
 @INPROCEEDINGS{LDA_2016, 
 	author={E. I. G. Nassara and E. Grall-Maës and M. Kharouf}, 
-	booktitle={2016 15th IEEE International Conference on Machine Learning and Applications (ICMLA)}, 
-	title={Linear Discriminant Analysis for Large-Scale Data: Application on Text and Image Data}, 
-	year={2016}, 
-	pages={961-964}, 
+	title={Linear Discriminant Analysis for Large-Scale Data: Application on Text and Image Data},
+	year={2016},
+	booktitle={Machine Learning and Applications (ICMLA), 2016 15th IEEE Int.l Conf. on},
+	pages={961--964}, 
+	publisher={IEEE},
 	doi={10.1109/ICMLA.2016.0173}, 
 	month={Dec}
 }
 
 @article{Rebentrost2014,
 	author = {Rebentrost, Patrick and Mohseni, Masoud and Lloyd, Seth},
-	doi = {10.1103/PhysRevLett.113.130503},
-	isbn = {http://dx.doi.org/10.1103/PhysRevLett.113.130503},
-	issn = {10797114},
+	title = {Quantum support vector machine for big data classification},
+	year = {2014},
 	journal = {Physical Review Letters},
-	number = {3},
-	pages = {1-5},
-	title = {{Quantum support vector machine for big data classification}},
 	volume = {113},
-	year = {2014}
-}
-
-@article{LeCun2015,
-	author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
-	doi = {10.1038/nature14539},
-	isbn = {9780521835688},
-	issn = {0028-0836},
-	journal = {Nature},
-	number = {7553},
-	pages = {436-444},
-	title = {{Deep learning}},
-	volume = {521},
-	year = {2015}
+	pages = {1--5},
+	number = {13},
+	doi = {10.1103/PhysRevLett.113.130503},
+	issn = {10797114},
+	publisher={APS}		
 }
 
 @book{Boyd2010,
 	author = {Boyd, Stephen and Vandenberghe, Lieven},
-	booktitle = {Optimization Methods and Software},
-	doi = {10.1080/10556781003625177},
-	isbn = {9780521833783},
-	issn = {10556788},
-	number = {3},
-	pages = {487-487},
 	title = {Convex Optimization},
-	volume = {25},
-	year = {2010}
+	year = {2004},
+	 publisher={Cambridge university press}
 }
 
 @article{van2009dimensionality,
+	author={Van Der Maaten, Laurens and Postma, Eric and Van den Herik, Jaap},
   	title={Dimensionality reduction: a comparative},
-  	author={Van Der Maaten, Laurens and Postma, Eric and Van den Herik, Jaap},
+  	year={2009},
  	journal={J Mach Learn Res},
   	volume={10},
-  	pages={66-71},
- 	year={2009}
+  	pages={66--71},
+ 	
 }
 
 @article{Zhang2012,
-	author = {Zhang, Zhao and Member, Student and Chow, Tommy W S and Member, Senior},
-	pages = {1--12},
+	author = {Zhang, Zhao and Chow, Tommy WS and Zhao, Mingbo},
 	title = {M-Isomap : Orthogonal Constrained Marginal Isomap for Nonlinear Dimensionality Reduction},
-	year = {2012}
+	year = {2013},
+	journal={IEEE Trans. on cybernetics},
+	volume={43},
+	pages={180--191},
+	number={1},
+	publisher={IEEE}
 }
 
-@article{Cui2012,
+@inproceedings{Cui2012,
 	author = {Cui, Wencheng and Chen, Shuang and Yu, Tianshu and Ren, Lijie},
+	title = {Feature extraction of X-ray chest image based on KPCA},
+	year = {2012},
+	booktitle = {Proc. of 2nd Int. Conf. on Computer Science and Network Technology, ICCSNT 2012},
 	doi = {10.1109/ICCSNT.2012.6526153},
-	isbn = {9781467329644},
-	journal = {Proceedings of 2nd International Conference on Computer Science and Network Technology, ICCSNT 2012},
-	pages = {1263-1266},
-	title = {{Feature extraction of X-ray chest image based on KPCA}},
-	year = {2012}
+	note = {ISBN 9781467329644},
+	pages = {1263--1266},
+	publisher={IEEE}
 }
 
-@article{Jiang2011,
+@inproceedings{Jiang2011,
 	author = {Jiang, Shengli and Zhang, Junying and Kuang, Chunlin},
-	doi = {10.1109/ICEICE.2011.5777932},
-	isbn = {9781424480395},
-	journal = {2011 International Conference on Electric Information and Control Engineering, ICEICE 2011 - Proceedings},
-	number = {61070137},
-	pages = {36-39},
 	title = {A linear maximum variance unfolding algorithm and its application in image recognition},
-	year = {2011}
+	year = {2011},
+	booktitle = {2011 Int. Conf. on Electric Information and Control Engineering, ICEICE 2011 - Proc.},
+	doi = {10.1109/ICEICE.2011.5777932},
+	note = {ISBN 9781424480395},
+	publisher={IEEE},
+	number = {61070137},
+	pages = {36--39},
 }
 
 @article{COIFMAN20065,
+	author={Coifman, Ronald R and Lafon, St{\'e}phane},
 	title = {Diffusion maps},
+	year = {2006},
 	journal = {Applied and Computational Harmonic Analysis},
 	volume = {21},
+	pages = {5--30},
 	number = {1},
-	pages = {5 - 30},
-	year = {2006},
+	publisher={Elsevier}
 	issn = {1063-5203},
 	doi = {http://dx.doi.org/10.1016/j.acha.2006.04.006},
-	author = {Ronald R. Coifman and Stéphane Lafon}
 }
 
-@article{Oukrich2016,
+@inproceedings{Oukrich2016,
 	author = {Oukrich, Nadia and Maach, Abdelilah and Mabrouk, Sabri Elmahdi and Bouchard, Kevin},
-	isbn = {9781509007516},
-	pages = {818--823},
 	title = {Activity recognition using back-propagation algorithm and minimum redundancy feature selection method},
-	year = {2016}
+	year = {2016},
+	note = {ISBN 9781509007516},
+	pages = {818--823},
+	publisher = {IEEE}
 }
 
 @inproceedings{Donnelley2005,
 	author = {Donnelley, Martin and Knowles, Greg},
-	booktitle = {Proceedings of the Eighth International Symposium on Signal Processing and Its Applications, 2005},
-	doi = {10.1109/ISSPA.2005.1580224},
-	isbn = {0-7803-9243-4},
-	pages = {175-178},
-	journal = {IEEE},
 	title = {Computer aided long bone fracture detection},
-	volume = {1},
 	year = {2005},
-	month = feb
+	booktitle = {Proc. of the Eighth Int. Symp. on Signal Processing and Its Applications, 2005},
+	pages = {175--178},
+	doi = {10.1109/ISSPA.2005.1580224},
+	note = {ISBN 0-7803-9243-4},
+	publisher = {Association for the Study of Internal Fixation},
+	month = {Feb}
 }
 
-@INPROCEEDINGS{Syiam_Aziem_Soliman2004, 
+@article{Syiam_Aziem_Soliman2004, 
 	author={M. M. Syiam and M. A. El-Aziem and M. E. M. Soliman}, 
-	booktitle={Electrical, Electronic and Computer Engineering, 2004. ICEEC '04. 2004 International Conference on}, 
 	title={Adagen: adaptive interface agent for x-ray fracture detection}, 
 	year={2004}, 
-	pages={354-357}, 
+	booktitle={Electrical, Electronic and Computer Engineering, 2004. ICEEC '04. 2004 Int. Conf. on}, 
+	volume={2},
+	pages={354--357}, 
+	number={3},
 	doi={10.1109/ICEEC.2004.1374466}, 
-	month=sep
+	month={Sep}
 }
 
 @article{Mahendran2012,
+	author={Mahendran, SK and Baboo, S Santhosh},
   	title={Ensemble Systems for Automatic Fracture Detection},
-  	author={Mahendran, SK and Baboo, S Santhosh},
-  	journal={International Journal of Engineering and Technology},
-  	volume={4},
- 	 number={1},
- 	 pages={7},
   	year={2012},
- 	 publisher={IACSIT Press}
+  	journal={Int. Journal of Engineering and Technology},
+  	volume={4},
+ 	pages={7},
+  	number={1},
+ 	publisher={IACSIT Press}
 }
 
 @article{mahendran_Enhanced,
-  	title={An enhanced tibia fracture detection tool using image processing and classification fusion techniques in X-ray images},
   	author={Mahendran, SK and Baboo, S Santhosh},
+	title={An enhanced tibia fracture detection tool using image processing and classification fusion techniques in X-ray images},
+	year={2011},
   	journal={Global Journal of Computer Science and Technology},
   	volume={11},
- 	 number={14},
-  	pages={22--28},
-  	year={2011}
+	pages={22--28},
+ 	number={14},
 }
 
 @INPROCEEDINGS{ComputerAidedBoneFractureDetection, 
-	author={Z. Ekşi and E. Dandıl and M. Çakıroğlu}, 
-	booktitle={2012 20th Signal Processing and Communications Applications Conference (SIU)}, 
+	author={Ek{\c{s}}i, Ziya and Dand{\i}l, Emre and {\c{C}}ak{\i}ro{\u{g}}lu, Murat}, 
 	title={Computer aided bone fracture detection}, 
 	year={2012}, 
-	pages={1-4}, 
+	booktitle={2012 20th Signal Processing and Communications Applications Conf. (SIU)}, 
+	pages={1--4}, 
+	publisher={IEEE},
 	ISSN={2165-0608}, 
-	month=apr
+	month={Apr}
 }
 
 @inproceedings{lim2004detection,
+	author={Lim, Sher Ee and Xing, Yage and Chen, Ying and Leow, Wee Kheng and Howe, Tet Sen and Png, Meng Ai},
   	title={Detection of femur and radius fractures in x-ray images},
- 	 author={Lim, Sher Ee and Xing, Yage and Chen, Ying and Leow, Wee Kheng and Howe, Tet Sen and Png, Meng Ai},
- 	 booktitle={Proc. 2nd Int. Conf. on Advances in Medical Signal and Info. Proc},
+ 	year={2004},
+ 	booktitle={Proc. 2nd Int. Conf. on Advances in Medical Signal and Info. Proc},
   	volume={65},
-  	year={2004}
+  	publisher={IEEE}
 }
 
 @article{JoshuaCongfuHe2007,
-	abstract = {Computer Analysis of Images and Patterns},
-	author = {{Joshua Congfu He}, Wee},
+	author={He, Joshua Congfu and Leow, Wee Kheng and Howe, Tet Sen},
+	title={Hierarchical classifiers for detection of fractures in X-ray images},
+	year = {2007},
+	booktitle={International Conference on Computer Analysis of Images and Patterns},
 	doi = {10.1007/978-3-540-74272-2_119},
-	isbn = {978-3-540-74271-5},
-	pages = {1-8},
-	title = {LNCS 4673 - Hierarchical Classifiers for Detection of Fractures in X-Ray Images},
-	year = {2007}
+	note = {ISBN 978-3-540-74271-5},
+	pages={962--969},
+	publisher={Springer}
+	
 }
 
 @INPROCEEDINGS{Wei_Liming_2010, 
-	author={Z. Wei and Z. Liming}, 
-	booktitle={2010 3rd International Congress on Image and Signal Processing}, 
-	title={Study on recognition of the fracture injure site based on X-ray images}, 
+	author={Wei, Zheng and Liming, Zhang}, 
+	title={Study on recognition of the fracture injure site based on X-ray images},
 	year={2010}, 
+	booktitle={2010 3rd Int. Congr. on Image and Signal Processing (CISP)}, 
+	pages={1947--1950},
 	volume={4}, 
-	pages={1947-1950}, 
-	month=oct
+	month={Oct}
 }
 
 @article{Murphy2006,
 	author = {Murphy, Kevin P},
-	doi = {10.1007/978-3-540-74958-5_35},
-	isbn = {978-0262018029},
-	journal = {Bernoulli},
-	number = {October},
-	pages = {1--8},
-	title = {Naive Bayes classifiers Generative classifiers},
+	title={Naive bayes classifiers},
+	year = {2006},
+	journal = {University of British Columbiai},
 	volume = {4701},
-	year = {2006}
+	pages = {1--8},
+	doi = {10.1007/978-3-540-74958-5_35},
+	note = {ISBN 978-0262018029},
+	month = {Oct},
 }
 
 @INPROCEEDINGS{Ibrahim_Baharudin2016, 
-	author={A. M. Ibrahim and B. Baharudin}, 
-	booktitle={2016 3rd International Conference on Computer and Information Sciences (ICCOINS)}, 
+	author={Ibrahim, Aidarus M and Baharudin, Baharum},
 	title={Classification of mammogram images using shearlet transform and kernel principal component analysis}, 
 	year={2016}, 
-	pages={340-344}, 
+	booktitle={2016 3rd Int. Conf. on Computer and Information Sciences (ICCOINS)}, 
+	pages={340--344}, 
+	publisher={IEEE},
 	doi={10.1109/ICCOINS.2016.7783238}, 
 	month={Aug}
 }
 
 @article{Shao2009,
 	author = {Shao, Ji-Dong and Rong, Gang},
-	doi = {http://dx.doi.org/10.1016/j.eswa.2009.03.042},
-	isbn = {0957-4174},
-	issn = {0957-4174},
+	title = {Nonlinear process monitoring based on maximum variance unfolding projections},
+	year = {2009},
 	journal = {Expert Systems with Applications},
-	number = {8},
-	pages = {11332-11340},
-	publisher = {Elsevier Ltd},
-	title = {{Nonlinear process monitoring based on maximum variance unfolding projections}},
 	volume = {36},
-	year = {2009}
+	pages = {11332-11340},
+	doi = {http://dx.doi.org/10.1016/j.eswa.2009.03.042},
+	note = {ISBN 0957-4174},
+	issn = {0957-4174},
+	number = {8},
+	publisher = {Elsevier Ltd},
 }
 
 @INPROCEEDINGS{Pune2016, 
-	author={S. Khobragade and A. Tiwari and C. Y. Patil and V. Narke}, 
-	booktitle={2016 IEEE 1st International Conference on Power Electronics, Intelligent Control and Energy Systems (ICPEICES)}, 
-	title={Automatic detection of major lung diseases using Chest Radiographs and classification by feed-forward artificial neural network}, 
+	author={Khobragade, Shubhangi and Tiwari, Aditya and Patil, CY and Narke, Vikram}, 
+	title={Automatic detection of major lung diseases using Chest Radiographs and classification by feed-forward artificial neural network},
 	year={2016}, 
-	pages={1-5}, 
+	booktitle={2016 IEEE 1st Int. Conf. on Power Electronics, Intelligent Control and Energy Systems (ICPEICES)}, 
+	pages={1--5}, 
+	publisher={IEEE},
 	doi={10.1109/ICPEICES.2016.7853683}, 
-	month=jul
+	month={Jul}
 }
 
 @INPROCEEDINGS{Baqqar2012, 
-	author={M. Baqqar and Tie Wang and M. Ahmed and Fengshou Gu and Joan Lu and A. Ball}, 
-	booktitle={Proceedings of 2012 UKACC International Conference on Control}, 
-	title={A general regression neural network model for gearbox fault detection using motor operating parameters}, 
+	author={Baqqar, Mabrouka and Wang, Tie and Ahmed, Mahmud and Gu, Fengshou and Lu, Joan and Ball, Andrew},
+	title={A general regression neural network model for gearbox fault detection using motor operating parameters},
 	year={2012}, 
-	pages={584-588}, 
+	booktitle={Proc. of 2012 UKACC Int. Conf. on Control (CONTROL)}, 
+	pages={584--588}, 
+	publisher={IEEE},
 	doi={10.1109/CONTROL.2012.6334695}, 
-	month=sep
+	month={Sep}
 }
 
 @article{Scholkopf2012,
-	author = {Scholkopf, B and Smola, a J and Muller, K R},
-	doi = {10.1162/089976698300017467},
-	isbn = {08997667 (ISSN)},
-	issn = {0899-7667},
-	journal = {Computer Vision And Mathematical Methods In Medical And Biomedical Image Analysis},
-	pages = {583--588},
+	author = {Sch{\"o}lkopf, Bernhard and Smola, Alexander and M{\"u}ller, Klaus-Robert},
 	title = {Kernel Principal Component Analysis},
+	year = {1997},
+	journal = {Computer Vision And Mathematical Methods In Medical And Biomedical Image Analysis},
 	volume = {1327},
-	year = {2012}
+	pages = {583--588},
+	doi = {10.1162/089976698300017467},
+	note = {ISBN 08997667 (ISSN)},
+	issn = {0899-7667},
+	publisher={Springer}
 }
 
 @INPROCEEDINGS{Li_Liang2016, 
-	author={Y. Li and W. Liang and Y. Zhang and H. An and J. Tan}, 
-	booktitle={2016 38th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)}, 
-	title={Automatic Lumbar Vertebrae Detection Based on Feature Fusion Deep Learning for Partial Occluded C-arm X-ray Images}, 
-	year={2016}, 
-	pages={647-650}, 
+	author={Li, Yang and Liang, Wei and Zhang, Yinlong and An, Haibo and Tan, Jindong}, 
+	title={Automatic Lumbar Vertebrae Detection Based on Feature Fusion Deep Learning for Partial Occluded C-arm X-ray Images},
+	year={2016},
+	booktitle={2016 38th Annu. Int. Conf. of the IEEE Engineering in Medicine and Biology Society (EMBC)}, 
+	pages={647--650}, 
+	publisher={IEEE}
 	doi={10.1109/EMBC.2016.7590785}, 
 	ISSN={1557-170X}, 
-	month=aug
+	month={Aug}
 }
 
 @INPROCEEDINGS{Aeini2014, 
 	author={F. Aeini and A. M. E. Moghadam and F. Mahmoudi}, 
-	booktitle={Telecommunications (IST), 2014 7th International Symposium on}, 
 	title={Non linear dimensional reduction method based on supervised neighborhood graph}, 
 	year={2014}, 
-	pages={35-40}, 
+	booktitle={Telecommunications (IST), 2014 7th Int. Symp. on}, 
+	pages={35--40}, 
+	publisher={IEEE},
 	doi={10.1109/ISTEL.2014.7000666}, 
-	month=sep
+	month={Sep}
+}
+
+@article{tan2012computer,
+	author={Tan, Jen Hong and Acharya, U Rajendra and Tan, Collin and Abraham, K Thomas and Lim, Choo Min},
+  	title={Computer-assisted diagnosis of tuberculosis: a first order statistical approach to chest radiograph},
+ 	year={2012},
+ 	journal={Journal of medical systems},
+ 	volume={36},
+	pages={2751--2759},
+  	number={5},
+ 	publisher={Springer}
 }
